# Scop-42

./: .gitignore  CMakeLists.txt  Makefile  README.md  project-structure.txt
shaders/: fragment_shader.glsl  fragment_shader_color.glsl  fragment_shader_flat.glsl  fragment_shader_grayscale.glsl  fragment_shader_phong.glsl  fragment_shader_point.glsl  fragment_shader_texture.glsl  fragment_shader_transition.glsl  vertex_shader_color.glsl  vertex_shader_flat.glsl  vertex_shader_transition.glsl
src/: main.cpp
